# ToxinKanaIME

./: .gitignore  CMakeLists.txt  README.md  inputmode.h  kanaconverter.cpp  kanaconverter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rules.json
